# ai-shopping-cart

./: README.md  main.py  pyproject.toml  requirements.txt
app/: image_to_vector.py  main.py  prompts.py  tools.py  vector_db.py
app/chroma_db/: chroma.sqlite3
app/data/items/: items.json
